// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Steps snapshot Steps demo snapshot 0 1`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    style={
      Object {
        "width": "120px",
      }
    }
  >
    <div
      className="bui-steps bui-steps-vertical"
    >
      <div
        className="bui-step bui-step-vertical bui-step-label-horizontal"
        onClick={[Function]}
      >
        <div
          className="bui-step-line bui-step-line-active"
        />
        <div
          className="bui-step-icon"
        >
          <div
            className="bui-step-icon-active"
          />
        </div>
        <div
          className="bui-step-content"
        >
          <div
            className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              className="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              第一步
            </div>
          </div>
        </div>
      </div>
      <div
        className="bui-step bui-step-vertical bui-step-label-horizontal"
        onClick={[Function]}
      >
        <div
          className="bui-step-line bui-step-line-wait"
        />
        <div
          className="bui-step-icon"
        >
          <svg
            className="bui-svg-icon"
            color="#ced1d6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
              }
            }
            focusable="false"
            viewBox="0 0 96 96"
          />
        </div>
        <div
          className="bui-step-content"
        >
          <div
            className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              第二步
            </div>
          </div>
        </div>
      </div>
      <div
        className="bui-step bui-step-vertical bui-step-label-horizontal"
        onClick={[Function]}
      >
        <div
          className="bui-step-line bui-step-line-wait"
        />
        <div
          className="bui-step-icon"
        >
          <svg
            className="bui-svg-icon"
            color="#ced1d6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
              }
            }
            focusable="false"
            viewBox="0 0 96 96"
          />
        </div>
        <div
          className="bui-step-content"
        >
          <div
            className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              第三步
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot Steps demo snapshot 0 2`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-steps bui-steps-horizontal"
  >
    <div
      className="bui-step bui-step-horizontal bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-active"
      />
      <div
        className="bui-step-icon"
      >
        <div
          className="bui-step-icon-active"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
        >
          <div
            className="bui-step-title bui-step-title-active bui-step-title-horizontal"
          >
            第一步
          </div>
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-horizontal bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            第二步
          </div>
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-horizontal bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            第三步
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot Steps demo snapshot 0 3`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-steps bui-steps-vertical"
  >
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-active"
      />
      <div
        className="bui-step-icon"
      >
        <div
          className="bui-step-icon-active"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
        >
          <div
            className="bui-step-title bui-step-title-active bui-step-title-horizontal"
          >
            第一步
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 1
          </div>
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            第二步
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 2
          </div>
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            第三步
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 3
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="bui-steps bui-steps-vertical"
  >
    <div
      className="bui-step bui-step-vertical bui-step-label-vertical"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-active"
      />
      <div
        className="bui-step-icon"
      >
        <div
          className="bui-step-icon-active"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-active"
        >
          <div
            className="bui-step-title bui-step-title-active bui-step-title-vertical"
          >
            第一步
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-vertical"
          >
            副标题 1
          </div>
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-vertical"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-vertical"
          >
            第二步
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-vertical"
          >
            副标题 2
          </div>
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-vertical"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-vertical"
          >
            第三步
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-vertical"
          >
            副标题 3
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot Steps demo snapshot 0 4`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-steps bui-steps-vertical"
  >
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-active"
      />
      <div
        className="bui-step-icon"
      >
        <div
          className="bui-step-icon-active"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
        >
          <div
            className="bui-step-title bui-step-title-active bui-step-title-horizontal"
          >
            标题 1
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 1
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            标题 2
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 2
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            标题 3
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 3
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            标题 4
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 4
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot Steps demo snapshot 0 5`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-steps bui-steps-vertical"
  >
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-error"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ff335c"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm-8.1 27.8c-1.1-1.1-2.9-1.1-4.1 0s-1.1 2.9 0 4.1l8.1 8.1-8.1 8.1c-1.1 1.1-1.1 2.9 0 4.1s2.9 1.1 4.1 0l8.1-8.1 8.1 8.1c1.1 1.1 2.9 1.1 4.1 0s1.1-2.9 0-4.1L52.1 48l8.1-8.1c1.1-1.1 1.1-2.9 0-4.1s-2.9-1.1-4.1 0L48 43.9l-8.1-8.1z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-error"
        >
          <div
            className="bui-step-title bui-step-title-error bui-step-title-horizontal"
          >
            标题 1
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 1
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-finish"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ff335c"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm17.1 27.9c-1.2-1.2-3.1-1.2-4.2 0L43 53.8l-7.9-7.9c-1.2-1.2-3.1-1.2-4.2 0s-1.2 3.1 0 4.2l10 10c1.2 1.2 3.1 1.2 4.2 0l20-20c1.2-1.2 1.2-3.1 0-4.2z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-finish"
        >
          <div
            className="bui-step-title bui-step-title-finish bui-step-title-horizontal"
          >
            标题 2
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 2
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-active"
      />
      <div
        className="bui-step-icon"
      >
        <div
          className="bui-step-icon-active"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
        >
          <div
            className="bui-step-title bui-step-title-active bui-step-title-horizontal"
          >
            标题 3
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 3
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            标题 4
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 4
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot Steps demo snapshot 0 6`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-steps bui-steps-vertical"
  >
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-active"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ff335c"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M62.6 11C78.1 11 88 23.4 88 40.1c0 13-11.7 27.2-34.8 43.3-3.1 2.2-7.2 2.2-10.3 0C19.7 67.3 8 53.1 8 40.1 8 23.4 17.9 11 33.4 11c5.6 0 9.4 2 14.6 6.4C53.2 13 57 11 62.6 11z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
        >
          <div
            className="bui-step-title bui-step-title-active bui-step-title-horizontal"
          >
            标题 1
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 1
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-active"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ff335c"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 91C42.6 91 9 65.1 9 43.7S26.5 5 48 5s39 17.3 39 38.7S53.4 91 48 91zm0-35c6.6 0 12-5.4 12-12s-5.4-12-12-12-12 5.4-12 12 5.4 12 12 12z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
        >
          <div
            className="bui-step-title bui-step-title-active bui-step-title-horizontal"
          >
            标题 2
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 2
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-error"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ff335c"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm0 6c-18.8 0-34 15.2-34 34s15.2 34 34 34 34-15.2 34-34-15.2-34-34-34zm4.1 34 8.1 8.1c1.1 1.1 1.1 2.9 0 4.1s-2.9 1.1-4.1 0L48 52.1l-8.1 8.1c-1.1 1.1-2.9 1.1-4.1 0s-1.1-2.9 0-4.1l8.1-8.1-8.1-8.1c-1.1-1.1-1.1-2.9 0-4.1s2.9-1.1 4.1 0l8.1 8.1 8.1-8.1c1.1-1.1 2.9-1.1 4.1 0s1.1 2.9 0 4.1L52.1 48z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-error"
        >
          <div
            className="bui-step-title bui-step-title-error bui-step-title-horizontal"
          >
            标题 3
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 3
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-vertical bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ff335c"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88c22.1 0 40-17.9 40-40S70.1 8 48 8 8 25.9 8 48s17.9 40 40 40zM30.9 60.9 45 46.8V30c0-1.7 1.3-3 3-3s3 1.3 3 3v18c0 .8-.3 1.6-.9 2.1l-15 15c-1.2 1.2-3.1 1.2-4.2 0-1.2-1.2-1.2-3 0-4.2z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            标题 4
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 4
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot Steps demo snapshot 0 7`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    className="bui-steps bui-steps-horizontal"
  >
    <div
      className="bui-step bui-step-horizontal bui-step-label-horizontal bui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-error"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ff335c"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 8c22.1 0 40 17.9 40 40S70.1 88 48 88 8 70.1 8 48 25.9 8 48 8zm-8.1 27.8c-1.1-1.1-2.9-1.1-4.1 0s-1.1 2.9 0 4.1l8.1 8.1-8.1 8.1c-1.1 1.1-1.1 2.9 0 4.1s2.9 1.1 4.1 0l8.1-8.1 8.1 8.1c1.1 1.1 2.9 1.1 4.1 0s1.1-2.9 0-4.1L52.1 48l8.1-8.1c1.1-1.1 1.1-2.9 0-4.1s-2.9-1.1-4.1 0L48 43.9l-8.1-8.1z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-error"
        >
          <div
            className="bui-step-title bui-step-title-error bui-step-title-horizontal"
          >
            第一步
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-horizontal bui-step-label-horizontal"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-active"
      />
      <div
        className="bui-step-icon"
      >
        <div
          className="bui-step-icon-active"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
        >
          <div
            className="bui-step-title bui-step-title-active bui-step-title-horizontal"
          >
            第二步
          </div>
        </div>
      </div>
    </div>
    <div
      className="bui-step bui-step-horizontal bui-step-label-horizontal bui-step-disabled"
      onClick={[Function]}
    >
      <div
        className="bui-step-line bui-step-line-wait"
      />
      <div
        className="bui-step-icon"
      >
        <svg
          className="bui-svg-icon"
          color="#ced1d6"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
            }
          }
          focusable="false"
          viewBox="0 0 96 96"
        />
      </div>
      <div
        className="bui-step-content"
      >
        <div
          className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
        >
          <div
            className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
          >
            第三步
          </div>
          <div
            className="bui-step-subtitle bui-step-subtitle-horizontal"
          >
            副标题 3
          </div>
        </div>
        <div
          className="bui-step-desc"
        >
          这是一段描述文案
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot Steps demo snapshot 0 8`] = `
<div
  className="bui-steps bui-steps-vertical"
>
  <div
    className="bui-step bui-step-vertical bui-step-label-vertical"
    onClick={[Function]}
  >
    <div
      className="bui-step-line bui-step-line-active"
    />
    <div
      className="bui-step-icon"
    >
      <div
        className="bui-step-icon-active"
      />
    </div>
    <div
      className="bui-step-content"
    >
      <div
        className="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-active"
      >
        <div
          className="bui-step-title bui-step-title-active bui-step-title-vertical"
        >
          退款申请 已提交
        </div>
        <div
          className="bui-step-subtitle bui-step-subtitle-vertical"
        >
          2021-03-30 19:00 
        </div>
      </div>
      <div
        className="bui-step-desc"
      >
        <div
          className="bui-stack"
          style={
            Object {
              "--align-items": "flex-start",
              "--flex-direction": "column",
              "--flex-wrap": "nowrap",
              "--justify-content": "center",
              "--spacing": "0",
            }
          }
        >
          <div
            style={
              Object {
                "backgroundColor": "var(--bui-color-bg-view)",
                "borderRadius": "10px",
                "display": "flex",
                "flexDirection": "column",
                "height": "80px",
                "justifyContent": "space-around",
                "margin": "5px 0 20px",
                "padding": "5px 10px",
                "width": "220px",
              }
            }
          >
            <div>
              <span
                style={
                  Object {
                    "color": "#5F6672",
                  }
                }
              >
                退票电影
              </span>
              <span
                style={
                  Object {
                    "color": "#2E333E",
                    "paddingLeft": "20px",
                  }
                }
              >
                复仇者联盟3（3张）
              </span>
            </div>
            <div>
              <span
                style={
                  Object {
                    "color": "#5F6672",
                  }
                }
              >
                退票金额
              </span>
              <span
                style={
                  Object {
                    "color": "#2E333E",
                    "paddingLeft": "20px",
                  }
                }
              >
                38.9元
              </span>
            </div>
            <div>
              <span
                style={
                  Object {
                    "color": "#5F6672",
                  }
                }
              >
                服务费
              </span>
              <span
                style={
                  Object {
                    "color": "#2E333E",
                    "paddingLeft": "34px",
                  }
                }
              >
                4元（影院、淘票票收取）
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="bui-step bui-step-vertical bui-step-label-vertical"
    onClick={[Function]}
  >
    <div
      className="bui-step-line bui-step-line-wait"
    />
    <div
      className="bui-step-icon"
    >
      <svg
        className="bui-svg-icon"
        color="#ced1d6"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-step-content"
    >
      <div
        className="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-wait"
      >
        <div
          className="bui-step-title bui-step-title-wait bui-step-title-vertical"
        >
          退款申请 已提交
        </div>
        <div
          className="bui-step-subtitle bui-step-subtitle-vertical"
        >
          2021-03-30 19:08 
        </div>
      </div>
      <div
        className="bui-step-desc"
      >
        正在处理退款申请，预计1-3天原路返回至你的付款账户。
      </div>
    </div>
  </div>
  <div
    className="bui-step bui-step-vertical bui-step-label-vertical"
    onClick={[Function]}
  >
    <div
      className="bui-step-line bui-step-line-wait"
    />
    <div
      className="bui-step-icon"
    >
      <svg
        className="bui-svg-icon"
        color="#ced1d6"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
          }
        }
        focusable="false"
        viewBox="0 0 96 96"
      />
    </div>
    <div
      className="bui-step-content"
    >
      <div
        className="bui-step-title-wrapper bui-step-title-wrapper-vertical bui-step-title-wrapper-line-wait"
      >
        <div
          className="bui-step-title bui-step-title-wait bui-step-title-vertical"
        >
          退款完成
        </div>
        <div
          className="bui-step-subtitle bui-step-subtitle-vertical"
        >
          2021-03-30 19:08 
        </div>
      </div>
      <div
        className="bui-step-desc"
      >
        退款到账后，将结束本次退款流程。
      </div>
    </div>
  </div>
</div>
`;

exports[`Steps snapshot Steps demo snapshot 0 9`] = `
<div
  className="bui-stack"
  style={
    Object {
      "--align-items": "center",
      "--flex-direction": "column",
      "--flex-wrap": "nowrap",
      "--justify-content": "center",
      "--spacing": "0",
    }
  }
>
  <div
    style={
      Object {
        "width": "176px",
      }
    }
  >
    <div
      className="bui-steps bui-steps-vertical"
      style={
        Object {
          "--step-icon-margin": "12px 4px 0 0",
          "--step-line-padding": "36px 0 0 0",
          "--title-font-size": "30px",
        }
      }
    >
      <div
        className="bui-step bui-step-vertical bui-step-label-horizontal"
        onClick={[Function]}
      >
        <div
          className="bui-step-line bui-step-line-active"
        />
        <div
          className="bui-step-icon"
        >
          <div
            className="bui-step-icon-active"
          />
        </div>
        <div
          className="bui-step-content"
        >
          <div
            className="bui-step-title-wrapper bui-step-title-wrapper-line-active"
          >
            <div
              className="bui-step-title bui-step-title-active bui-step-title-horizontal"
            >
              第一步
            </div>
          </div>
        </div>
      </div>
      <div
        className="bui-step bui-step-vertical bui-step-label-horizontal"
        onClick={[Function]}
      >
        <div
          className="bui-step-line bui-step-line-wait"
        />
        <div
          className="bui-step-icon"
        >
          <svg
            className="bui-svg-icon"
            color="#ced1d6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
              }
            }
            focusable="false"
            viewBox="0 0 96 96"
          />
        </div>
        <div
          className="bui-step-content"
        >
          <div
            className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              第二步
            </div>
          </div>
        </div>
      </div>
      <div
        className="bui-step bui-step-vertical bui-step-label-horizontal"
        onClick={[Function]}
      >
        <div
          className="bui-step-line bui-step-line-wait"
        />
        <div
          className="bui-step-icon"
        >
          <svg
            className="bui-svg-icon"
            color="#ced1d6"
            dangerouslySetInnerHTML={
              Object {
                "__html": "<path d=\\"M48 88C25.9 88 8 70.1 8 48S25.9 8 48 8s40 17.9 40 40-17.9 40-40 40zm0-6c18.8 0 34-15.2 34-34S66.8 14 48 14 14 29.2 14 48s15.2 34 34 34z\\"/>",
              }
            }
            focusable="false"
            viewBox="0 0 96 96"
          />
        </div>
        <div
          className="bui-step-content"
        >
          <div
            className="bui-step-title-wrapper bui-step-title-wrapper-line-wait"
          >
            <div
              className="bui-step-title bui-step-title-wait bui-step-title-horizontal"
            >
              第三步
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
